[gd_scene load_steps=2 format=1]

[ext_resource path="res://10print.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="control" type="Panel" parent="."]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 157.0
margin/bottom = 104.0

[node name="button_group" type="VBoxContainer" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 3.0
margin/right = 160.0
margin/bottom = 110.0
alignment = 0

[node name="left_right_checkbtn" type="CheckButton" parent="control/button_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 22.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Left - Right"
flat = false
align = 0

[node name="right_left_checkbtn" type="CheckButton" parent="control/button_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 160.0
margin/bottom = 48.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Right - Left"
flat = false
align = 0

[node name="top_down_checkbtn" type="CheckButton" parent="control/button_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 52.0
margin/right = 160.0
margin/bottom = 74.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Top Down"
flat = false
align = 0

[node name="bottom_up_checkbtn" type="CheckButton" parent="control/button_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 78.0
margin/right = 160.0
margin/bottom = 100.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Bottom - Up"
flat = false
align = 0

[node name="line_width_label" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 112.0
margin/right = 124.0
margin/bottom = 126.0
text = "Line width: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line_width_slider" type="HSlider" parent="control"]

rect/rotation = 0.0815267
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 124.0
margin/right = 158.0
margin/bottom = 140.0
range/min = 1.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 10
ticks_on_borders = true
focus_mode = 2


